<resources>
    <string name="app_name">e-LABorate</string>
    <string name="welcome">Welcome to</string>
    <string name="welcome2">e-LABorate Application</string>
    <string name="component1">Component 1</string>
    <string name="component2">Component 2</string>
    <string name="component3">Component 3</string>
    <string name="login">Sign In</string>
    <string name="email_input">"Isi email anda disini! "</string>
    <string name="wrong_email">Kamu memasukan email yang salah!</string>
    <string name="input_password">Tolong masukan password anda disini!</string>
    <string name="password_length">Password tidak boleh kurang dari 8 karakter!</string>
    <string name="input_name">Tolong isikan nama anda!</string>
    <string name="invalid_name">Nama terlalu pendek!</string>
    <string name="password_valided">Tolong konfirmasi lagi passwordmu</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcomeBack">Welcome Back to e-LABorate Application</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password1">Forget Password</string>
    <string name="click_here">Click Here</string>
    <string name="register">Sign Up</string>
    <string name="registertoo">Already have an account?</string>
    <string name="button">Button Back</string>
    <string name="name">Username</string>
    <string name="password_not_match">Password tidak cocok</string>
    <string name="cpassword">Confirm Password</string>
    <string name="and">and</string>
    <string name="term"><![CDATA[Terms & Conditions]]></string>
    <string name="agree">I agree to the</string>
    <string name="privacy">Privacy Policy</string>
    <string name="registerinfo">Please Register an Account to Access the e-LABorate Application</string>
    <string name="logintoo">Don\'t have an account?</string>
    <string name="confirmPasswordEditText">Konfirmasi ulang password anda</string>
    <string name="notifregis">Notification</string>
    <string name="succesregister">Successfully create an account, please sign in to access the application.</string>
    <string name="successgetcode">Successful verification, please change the password</string>
    <string name="img_user">Success Register</string>
    <string name="syarat_ketentuan">Syarat &amp; Ketentuan untuk e-LABorate:\n\n1. Penggunaan Aplikasi:\n    Dengan menggunakan aplikasi e-LABorate, Anda setuju untuk mematuhi dan terikat oleh syarat dan ketentuan yang ditetapkan. Anda harus menggunakan aplikasi ini sesuai dengan hukum yang berlaku dan bertanggung jawab atas segala tindakan yang dilakukan.\n\n2. Informasi Pribadi:\n    Saat menggunakan aplikasi ini, Anda mungkin diminta untuk menyediakan informasi pribadi. Kami akan menjaga kerahasiaan informasi tersebut sesuai dengan Kebijakan Privasi kami (lihat bagian di bawah).\n\n3. Kewajiban Pengguna:\n    Anda bertanggung jawab atas akurasi informasi yang Anda berikan dalam aplikasi ini. Anda juga diharapkan untuk menggunakan aplikasi ini secara bertanggung jawab dan menghormati hak dan privasi pengguna lain.\n\n4. Kekayaan Intelektual:\n    Seluruh konten dalam aplikasi ini, termasuk tetapi tidak terbatas pada teks, gambar, video, dan desain, merupakan milik dari e-LABorate atau pihak ketiga yang telah memberikan izin penggunaannya. Anda dilarang menggunakan, menyalin, atau mendistribusikan konten tersebut tanpa izin tertulis dari pemiliknya.\n\n5. Penanggung Jawab:\n    Meskipun kami berusaha sebaik mungkin untuk menyediakan informasi yang akurat, e-LABorate tidak memberikan jaminan atas keakuratan, kelengkapan, atau ketersediaan informasi yang diberikan dalam aplikasi ini. Anda bertanggung jawab penuh atas penggunaan informasi tersebut.</string>
    <string name="kebijakan_privasi">Kebijakan Privasi:\n\n1. Pengumpulan Informasi:\n    Kami dapat mengumpulkan informasi pribadi Anda, seperti nama, alamat email, dan data kesehatan, untuk keperluan pendaftaran dan penggunaan aplikasi. Informasi ini akan dijaga kerahasiaannya dan digunakan sesuai dengan kebijakan privasi ini.\n\n2. Penggunaan Informasi:\n    Informasi pribadi yang kami kumpulkan dapat digunakan untuk memberikan layanan yang diminta, mengirimkan pembaruan, melakukan analisis statistik, atau untuk tujuan penelitian yang telah diubah menjadi bentuk yang tidak dapat diidentifikasi.\n\n3. Keamanan Data:\n    Kami mengambil langkah-langkah keamanan yang wajar untuk melindungi informasi pribadi Anda dari akses, penggunaan, atau pengungkapan yang tidak sah. Namun, perlu diingat bahwa tidak ada metode transmisi data yang 100% aman di internet.\n\n4. Pengungkapan kepada Pihak Ketiga:\n    Kami tidak akan mengungkapkan informasi pribadi Anda kepada pihak ketiga tanpa izin Anda, kecuali jika diwajibkan oleh hukum atau jika diperlukan untuk tujuan layanan yang diminta.\n\n5. Perubahan Kebijakan Privasi:\n    Kami dapat memperbarui kebijakan privasi ini dari waktu ke waktu. Setiap perubahan akan diinformasikan melalui pembaruan pada aplikasi atau melalui metode komunikasi lain yang sesuai.\n\nDengan menggunakan aplikasi e-LABorate, Anda menyetujui dan memahami Conditions &amp; Terms (Syarat &amp; Ketentuan) serta Kebijakan Privasi yang telah ditetapkan.</string>
    <string name="forget">The verification code has been emailed to</string>
    <string name="emailforget">example@gmail.com</string>
    <string name="please">Please enter the verification code correctly.</string>
    <string name="resend">Haven\'t Received Verification Code?</string>
    <string name="resendverify">Click on Send Code once again</string>
    <string name="next">Next</string>
    <string name="send">Send Code</string>
    <string name="newpassword">New Password</string>
    <string name="editpassword">Please make a password change, make sure to fill in a strong password</string>
    <string name="editpass">Edit Password</string>
    <string name="how_is_your_day">Bagaimana kabar kamu hari ini?</string>
    <string name="hello">Hi, %1$s</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="result">Result</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_diagnosis">Please fill in the data appropriately to avoid errors in diagnosis</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="red_blood_cell_count">Red Blood Cell Count (RBC)</string>
    <string name="hemoglobin_hgb">Hemoglobin (HGB)</string>
    <string name="hematocrit_hct">Hematocrit (HCT)</string>
    <string name="mean_corpuscular_volume_mcv">Mean Corpuscular Volume (MCV)</string>
    <string name="mean_corpuscular_hemoglobin_mch">Mean Corpuscular Hemoglobin (MCH)</string>
    <string name="mean_corpuscular_hemoglobin_concetration_mchc">Mean Corpuscular Hemoglobin Concetration (MCHC)</string>
    <string name="red_cell_distribution_width_rdw_cv">Red Cell distribution width (RDW-CV)</string>
    <string name="white_blood_cell_count_wbc">White Blood Cell Count (WBC)</string>
    <string name="neutrophil_granulocytes_neu_gra_polys_segs_pmns">Neutrophil granulocytes (NEU,GRA,polys,segs,PMNs</string>
    <string name="lymphocytes_lym_lymphs">Lymphocytes (LYM,Lymphs)</string>
    <string name="monocytes_mo">Monocytes(MO)</string>
    <string name="eosinophils_eos">Eosinophils(Eos)</string>
    <string name="years">Years</string>
    <string name="unit_of_rbc">10^12 cells/L</string>
    <string name="unit_of_hgb">g/dl</string>
    <string name="percent">%</string>
    <string name="unit_of_mcv">fL</string>
    <string name="unit_of_mch">pg</string>
    <string name="unit_of_mchc">g/dL</string>
    <string name="basophils_ba_basos">Basophils(BA, Basos)</string>
    <string name="unit_of_wbc">10^9 cells/L</string>
    <string name="successresetPassword">Password successfully changed, please sign in to the application.</string>
    <string name="request_sent">Request Sent</string>
    <string name="language">Language Settings</string>
    <string name="change">Account Settings</string>
    <string name="edit">Edit</string>
    <string name="arrow">Go</string>
    <string name="logout">Log Out</string>
    <string name="interpretation">Interpretation</string>
    <string name="gender">0 = Male\n1 = Female</string>
    <string name="successDiagnose">Diagnosis is successful, please check the diagnosis result in the result menu.</string>
    <string name="successEditPassword">Edit profile successfully, please check your profile again</string>
    <string name="submit">Submit</string>
    <string name="editprofile">Make sure to edit the profile accordingly by entering the right data</string>
    <string name="editprof">Edit Profile</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="under_construction">Under Construction</string>
    <string name="we_are_currently_working_on_this_page">We are currently working on this page</string>
    <string name="data_user">%1$s</string>
    <string name="address_input">Input Your Address here!</string>
    <string name="wrong_phone_number">You put incorrect Number Phone!</string>
    <string name="phone_number_input">Put Number Phone here!</string>
    <string name="test_type">Test Type</string>
    <string name="blood_test">Blood Test</string>
    <string name="description">Description</string>
    <string name="e_laborate">E-Laborate</string>
    <string name="splash_screen_description">Find medications, doctors, and workouts according to the result</string>
    <string name="my_activities">My Activities</string>
    <string name="account_settings">Account Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="patient_name">Patient Name</string>
</resources>