<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.forget.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/button"
        android:src="@drawable/baseline_arrow_back_24"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password1"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/forget"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/email_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_regular"
        tools:text="@string/emailforget"
        android:textColor="#FCB208"
        android:textSize="16sp"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/please"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/box1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="12dp"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/box2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="12dp"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/box3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="12dp"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/box4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="12dp"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/box5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="12dp"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/box6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:padding="12dp"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="@style/progressBar"
        android:layout_gravity="center_horizontal"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/item_forget"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/button"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UseCompoundDrawables"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/img_user"
            android:src="@drawable/item_register"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/error"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck"
            tools:text="@string/successgetcode" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/resend"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/resendverify"
        android:textColor="#FCB208"
        android:textSize="16sp"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="VisualLintBounds">

    <Button
        android:id="@+id/generatedVerifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:background="@drawable/button"
        android:layout_weight="1"
        android:text="@string/send"
        android:layout_marginStart="16dp"
        tools:ignore="ButtonStyle,VisualLintButtonSize"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:background="@drawable/button"
        android:layout_weight="1"
        android:text="@string/next"
        android:layout_marginStart="16dp"
        tools:ignore="ButtonStyle,VisualLintButtonSize"
        android:layout_marginEnd="16dp" />
    </LinearLayout>
</LinearLayout>